--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "biohunter",
     "version": "0.1.0",
     "private": true,
+    "main": "frontend/index.js",
     "dependencies": {
     },
     "scripts": {
