--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
     },
     "scripts": {
-      "start": "node backend/src/server.js",
+      "start": "cd backend && yarn install && yarn start",
       "heroku-postbuild": "cd frontend && yarn install && yarn run build"
     },
     "engines": {
