--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "start": "node -r esm src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
